--- a/jan3/index2.html
+++ b/jan3/index2.html
@@ -8,7 +8,7 @@
         </tr>
         <tr>
             <td class="on">
-                AC
+                <button>AC</button>
             </td>
             <td class="arth">
                 +/-
