--- a/jan7/index2.html
+++ b/jan7/index2.html
@@ -1,80 +1,82 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="index2.css">
-    </head>
+
+<head>
+    <link rel="stylesheet" href="index2.css">
+    <title>landing page</title>
+</head>
+
 <body>
     <header>
-        <h1 id="heading"><nav>ASPECTS OF BUYING BIKE</nav></h1>
-        <marquee id="description" class="fixed"><b id="bold">Buyingbike is not an easy task as we think.</b>we have to look into
-            different features while buying a
-            bike.<b id="bold">One stop for choosing a better bike</b></marquee>
+        <div id="head">
+        <div id="intro">
+            <p>MOHAMMAD SOHAIL</p>
+        </div>
+        <div id="port">
+            <p><b>E-mail</b>sohailabbu0@gmail.com</p>
+            <p><img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" width="20px" height="20px">Mohammad_Sohail
+            </p>
+            <p><img src="https://toppng.com/uploads/preview/facebook-f-icon-facebook-logo-png-white-11563016108d1db9g68rk.png"
+                    width="20px">Mohd sohail</p>
+        </div>
+    </div>
     </header>
     <main>
-        <div id="images" class="fixed">
-            <img src="https://imgd.aeplcdn.com/476x268/bw/models/bajaj-pulsar-ns200-bs-vi20200211173001.jpg">
-            <img src="https://imgd.aeplcdn.com/476x268/bw/models/kawasaki-ninja-h2-sx-standard20200803233125.jpg">
-            <img src="https://images.carandbike.com/bike-images/large/triumph/street-triple/triumph-street-triple.jpg?v=31"
-                width="440px">
-        </div>
         <div id="aspects">
-            <h1><marquee>PRICE</marquee></h1>
-            <p>The most important thing you need to look into is the price variation according to the branding of the
-                automobile
-                company. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque repudiandae blanditiis magni
-                quis quia
-                voluptas maxime quae quo iste aspernatur. Id reiciendis accusamus minima illum enim deserunt vitae
-                mollitia
-                quaerat aliquid doloremque excepturi culpa, dolores, atque non necessitatibus, ad aliquam.</p>
-            <h1><marquee>MILLEAGE</marquee></h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam quae impedit dolores, saepe ut pariatur
-                illo
-                blanditiis voluptates odio deleniti vitae unde numquam corporis quod delectus esse officia nulla,
-                molestias
-                commodi voluptatum dolorem inventore? Asperiores laborum qui quam dolores et temporibus minus tempore
-                incidunt
-                numquam sapiente tempora ea tenetur provident ipsum doloribus, aspernatur cumque quae quasi
-                perspiciatis. Autem
-                ratione mollitia dolor qui voluptatibus, molestias aspernatur temporibus accusantium porro? Laborum
-                maiores
-                inventore esse sapiente nulla aliquam excepturi eius sequi distinctio, unde voluptatibus quis voluptate
-                eaque.
-                Recusandae reiciendis quae, cumque facere possimus omnis hic nisi perspiciatis deleniti quod fugiat,
-                impedit
-                voluptas animi nihil at rerum.
-            </p>
-            <h1><marquee>POWER</marquee></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi earum esse soluta facere vel itaque nemo
-                incidunt! Necessitatibus assumenda dolorem distinctio doloribus sit, ut non exercitationem. Corrupti
-                quibusdam
-                omnis perspiciatis in? Odio, sed! Ducimus magnam explicabo nemo iusto, amet temporibus! Vero eum ducimus
-                aut,
-                doloribus esse ea.</p>
-            <h1><marquee>BRAKING SYSTEM</marquee></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint eaque, odio ipsa repellendus ex libero
-                dolorem
-                quaerat, tempore nihil, perspiciatis sit reprehenderit! Voluptas aut velit eius dolorem possimus
-                recusandae
-                animi porro voluptate quod, maiores architecto quam! Rem ipsa ea assumenda perspiciatis eum. Enim totam
-                recusandae molestiae suscipit praesentium, ipsa eaque.</p>
-            <h1><marquee>TYRES</marquee></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus totam provident quas ipsa veniam magni!
-                Quis nam
-                placeat ullam quod suscipit dolores magnam asperiores qui labore mollitia aperiam, tempore quas
-                distinctio in
-                incidunt ut nulla provident? Nemo qui laboriosam facere ipsa blanditiis commodi labore exercitationem
-                error at
-                laudantium!</p>
-            <h1><marquee>ABS</marquee></h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, sit debitis iste enim, eaque sequi
-                doloribus
-                sapiente a corporis earum cupiditate. Placeat et consectetur aut dicta similique sed quidem deserunt!
-                Exercitationem qui sed porro voluptatem nihil labore ipsam, aspernatur iusto autem, commodi, culpa
-                suscipit
-                officia adipisci voluptates. Repellat voluptatem vitae ab dolore ea similique minus quaerat error, modi
-                molestiae unde placeat saepe eligendi obcaecati id asperiores cumque?
-            </p>
+            <h2>PERSONAL DETAILS:</h2>
+            <p>Fathers name   :    Mohammad Jani</p>
+            <p>Sex            :    Male</p>
+            <p>Nationality    :    <img src="https://www.mapsofindia.com/maps/india/india-flag.jpg" width="15px">Indian</p>
+            <p>Marital status :    Unmarried</p>
+            <p>Date of Birth  :    12<sup>th</sup>Aug,2001</p>
+            <h2>EDUCATIONAL QUALIFICATIONS:</h2>
+            <p>X class percentage  :   98%</p>
+            <p>12<sup>th</sup> Percentage     :   92.3%</p>
+            <p>B.tech Percentage   :   65%(till now)</p>
+            <h2>TECHNICAL QUALIFICATIONS:</h2>
+            <P><b>Full stack Developer</b></P>
+            <p><b>Java</b></p>
+            <p><b>Software Testing using Selenium</b></p>
+           
         </div>
+        <div id="about">
+            <table>
+                <tr>
+                    <td><img src="https://scontent.fhyd17-1.fna.fbcdn.net/v/t1.18169-9/15036313_1238582812854727_7961638133052805842_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=973b4a&_nc_ohc=tp5Ebc8IW4gAX8E-V51&_nc_ht=scontent.fhyd17-1.fna&oh=00_AT-XdPTvEWrWyNZxE7F7yEBm-eS5cUATuvo4nw8Y31EuNg&oe=6205398D"
+                            width="300px"></td>
+                    <td><img src="https://images.hindustantimes.com/rf/image_size_640x362/HT/p2/2020/09/05/Pictures/_3cbf3e58-ef2d-11ea-970b-cd9b3c0381e8.png"
+                            width="300px"></td>
+                </tr>
+                <tr>
+                    <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKV0zlYn0FP2lxleysafS1JGbkaMrkK8T5Ig&usqp=CAU" width="300px"></td>
+                    <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQijCzQZd0hOk3iwDUrGKkMDhjF69wbjYT00g&usqp=CAU" width="300px"></td>
+                </tr>
+                <tr>
+                    <td> <img src="https://image.shutterstock.com/image-photo/graduation-caps-thrown-air-260nw-658847998.jpg" width="300px"></td>
+                    <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoIPMPqWcaW_rjq_77kJ45nRUNDh_bbvHkvQ&usqp=CAU" width="300px"></td>
+                    <!-- <td>
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmZB6__iaBinbNHE-jSq4OuJ74o81ufWSzcg&usqp=CAU" width="300px">
+                    </td>
+                </tr> -->
+            </table>
+
+        </div>
+          <h2>DESCRIPTION:</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, laboriosam dolore id necessitatibus
+                nesciunt quam. Natus commodi animi incidunt architecto qui in earum tenetur repudiandae provident ad,
+                quaerat praesentium aut enim delectus temporibus at fugit, voluptate alias quod reiciendis nemo
+                veritatis quisquam? Est necessitatibus impedit nemo repudiandae voluptates aut natus facere esse
+                architecto iste nesciunt, magnam ut eveniet hic reiciendis odit deleniti asperiores, quis, quisquam
+                quaerat! Minus officia iusto totam sapiente, quia nisi? Eum qui itaque cumque at similique! Ad repellat
+                reiciendis, quas facere ducimus illo quia, voluptatibus doloribus provident temporibus debitis ex minus
+                ea quaerat! Nobis, ab. Quas labore necessitatibus iusto obcaecati quisquam consectetur, ut rem ex! Porro
+                eius ipsam adipisci cupiditate vel illo officiis voluptas, eveniet sunt quo quos nisi vero incidunt nemo
+                ullam? Cumque hic, molestias aliquid voluptas explicabo impedit fuga non iste, veniam rem doloribus
+                veritatis? Corporis iure natus delectus. Obcaecati et sit maiores voluptate odit.</p> 
     </main>
+    <footer>
+        <h5 style="text-align: center;">MOHAMMAD SOHAIL</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto officia, deserunt nobis non eligendi, perspiciatis officiis enim eius molestias laborum alias perferendis dolorum fugit consequatur porro, quibusdam beatae totam error?</p>
+    </footer>
 </body>
 
 </html>
